[NOID] changes 4.4